[tool.poetry]
name = "mystik"
version = "1.0.0"
description = ""
authors = ["Dennis Carlson"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
regex = "^2023.12.25"
lxml = "^5.1.0"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
