[package]
name = "mystik_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mystik_core"
crate-type = ["cdylib"]

[dependencies]
hex = "0.4.3"
num_cpus = "1.16.0"
pyo3 = "0.19.0"
regex = "1.9.1"
walkdir = "2.3.3"
