[package]
name = "mystiks_core"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mystiks_core"
crate-type = ["cdylib"]

[dependencies]
base64 = "0.21.4"
num_cpus = "1.16.0"
rand_core = "0.6.4"
rayon = "1.7.0"
regex = "1.9.1"
walkdir = "2.3.3"

[dependencies.pyo3]
version = "0.19.0"
features = [
    "extension-module",
    "generate-import-lib"
]

[dependencies.rand]
version = "0.8.5"
features = [
    "getrandom",
    "std"
]

[profile.profiling]
inherits = "release"
debug = true
